clean up profile page and resolve dark mode

--- a/src/app/_components/LandingPage/_components/HowItWorks/HowItWorks.module.scss
+++ b/src/app/_components/LandingPage/_components/HowItWorks/HowItWorks.module.scss
@@ -22,7 +22,7 @@
     transform: translateX(-50%);
     width: 100vw;
     height: 100%;
-    background-color: #F6F7F7;
+    background-color: $surface-muted;
     z-index: -1;
   }
 
