--- a/src/app/_components/OfferItem/OfferItem.module.scss
+++ b/src/app/_components/OfferItem/OfferItem.module.scss
@@ -10,7 +10,7 @@
   container-type: inline-size;
   container-name: offer-item;
 
-  border: 1px solid #D8D8D8;
+  border: 1px solid $border-light;
   overflow: hidden;
   text-decoration: none;
   color: inherit;
