--- a/src/app/_styles/variables.scss
+++ b/src/app/_styles/variables.scss
@@ -23,6 +23,8 @@ $off-white: var(--off-white);
 $light-blue: var(--light-blue);
 $text-light-link: var(--text-light-link);
 $profile-img: var(--profile-img);
+$navbar-background: var(--navbar-background);
+$surface-muted: var(--surface-muted);
 
 $border-light: var(--border-light);
 $light-gray: var(--light-gray);
